[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nagiosplugin"
description = "Class library for writing Nagios (Icinga) plugins"
authors = [
    { name = "Christian Kauhaus", email = "kc@flyingcircus.io" }
]
maintainers = [
    { name = "Matthew Pounsett", email = "matt@conundrum.com" }
]
readme = "README.txt"
license = { text = "ZPL-2.1" }
keywords = ["Nagios", "Icinga", "plugin", "check", "monitoring"]
requires-python = ">= 3.9"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Monitoring',
]
dynamic = ["version"]

[project.urls]
Documentation = "https://nagiosplugin.readthedocs.io/"
Download = "https://pypi.org/project/nagiosplugin/"
Source = "https://github.com/mpounsett/nagiosplugin"
Issues = "https://github.com/mpounsett/nagiosplugin/issues"
Changelog = "https://github.com/mpounsett/nagiosplugin/blob/main/HISTORY.txt"

[tool.setuptools.dynamic]
version = {attr = 'nagiosplugin.__version__'}

[tool.setuptools.packages.find]
include = ["nagiosplugin*"]

[tool.setuptools.package-data]
nagiosplugin = [
    "CONTRIBUTORS.txt",
    "HACKING.txt",
    "HISTORY.txt",
    "LICENSE.txt",
    "README.txt"
]
"nagiosplugin.doc" = [
    "Makefile",
    "*.rst",
    "*.py",
]
"nagiosplugin.tests" = [
    "*.py",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__",
    "*.pyc",
    "*.pyo"
]

[dependency-groups]
dev = [
    "setuptools",
    "tox",
]
docs = [
    "sphinx==1.8.5",
    "sphinx-rtd-theme",
]
build = [
    "twine",
]
